07_ngwrt.tf
resource "aws_route_table" "joon_ngwrt" {
  vpc_id = aws_vpc.joon_vpc.id

  route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_nat_gateway.joon_ngw.id
  }

  tags = {
    "Name" = "joon-ngwrt"
  }
}
